--- a/R/L2/Soca_biomass_analysis_L2.Rmd
+++ b/R/L2/Soca_biomass_analysis_L2.Rmd
@@ -40,6 +40,9 @@ list.files(dir)
 ## Read in data
 biomass <- read.csv(file.path(dir, "/T7_warmx_plant_traits/L1/T7_warmx_soca_biomass_L1.csv"))
 biomass$Year <- as.factor(biomass$Year)
+
+# remove irrigated control treatement for analysis
+biomass <- biomass %>% filter(Climate_Treatment != "Irrigated Control")
 ```
 
 Data Exploration
@@ -123,9 +126,9 @@ anova(m1)
 
 # Pairwise comparisons for climate treatments
 # back-transforming - A vs. W
-(2.02785)^2-((2.02785-0.42931)^2) # 1.556845 - warmed plants weighed ~1.56 g more than ambient
+(2.02736)^2-((2.02736-0.42693)^2) # 1.548812 - warmed plants weighed ~1.55 g more than ambient
 # back-transforming - A vs. WD
-(2.02785)^2-((2.02785-0.53658)^2) # 1.888289 - warmed + drought plants weighed ~1.89 g more than ambient
+(2.02736)^2-((2.02736-0.53073)^2) # 1.870287 - warmed + drought plants weighed ~1.87 g more than ambient
 
 biomass <- within(biomass, Climate_Treatment <- relevel(factor(Climate_Treatment), ref = "Ambient Drought"))
 m1 <- lmer(sqrt_biomass ~ Climate_Treatment * Galling_Status + (1|Rep/Footprint/Subplot) + (1|Year), data = biomass, REML=F)
@@ -134,11 +137,11 @@ anova(m1)
 
 # Pairwise comparisons for climate treatments
 # back-transforming - D vs. W
-(2.11198)^2-((2.11198-0.34518)^2) # 1.338877 - warmed plants weighed ~1.34 g more than droughted plants
+(2.1123)^2-((2.11232-0.34198)^2) # 1.327708 - warmed plants weighed ~1.33 g more than droughted plants
 
 # Pairwise comparisons for climate treatments
 # back-transforming - D vs. WD
-(2.11198)^2-((2.11198-0.45245)^2) # 1.70642 - warmed + drought plants weighed ~1.71 g more than droughted plants
+(2.11198)^2-((2.11232-0.45245)^2) # 1.705291 - warmed + drought plants weighed ~1.71 g more than droughted plants
 
 biomass <- within(biomass, Climate_Treatment <- relevel(factor(Climate_Treatment), ref = "Ambient"))
 m1 <- lmer(sqrt_biomass ~ Climate_Treatment * Galling_Status + (1|Rep/Footprint/Subplot) + (1|Year), data = biomass, REML=F)
@@ -149,7 +152,7 @@ anova(m1)
 summary(m1)
 
 # back-transforming - galled vs. non-galled
-(2.02785)^2-((2.02785-(-0.02733))^2) # -0.1115892 - non-galled plants weighed 0.11 g less than galled plants
+(2.00121)^2-((2.00121-(-0.02615))^2) # -0.1053471 - non-galled plants weighed 0.11 g less than galled plants
 
 # contrasts for treatment
 contrast1 <- contrast(emmeans(m1, ~Climate_Treatment), "pairwise", simple = "each", combine = F, adjust = "mvt", type = "response")
